# arbitrium

./: .gitignore  README.md  pyproject.toml
src/arbitrium/: __init__.py  server.py  session.py
tests/: test_server.py  test_session.py
