[project]
name = "arbitrium"
version = "0.1.0"
description = "Persistent shell MCP server for Claude Code — the agent commands its environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arbitrium"]

[project.scripts]
arbitrium = "arbitrium.server:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
